--- a/src/mbr2xgd.css
+++ b/src/mbr2xgd.css
@@ -1,6 +1,7 @@
 
 /*file: mbr2xgd.css ------------------------------------------------------------------------------------------------*/
 
+/*font padrao do site... -------------------------------------------------------------------------------------------*/
 body{
 	font-family: monospace;
 	font-size: 14px;
@@ -11,10 +12,6 @@ body{
 	text-align:center;
 	text-shadow:0px 1px 5px black;
 }
-
-
-h3{
-}
-
+/*font padrao do site... -------------------------------------------------------------------------------------------*/
 
 /*file: mbr2xgd.css ------------------------------------------------------------------------------------------------*/
