--- a/src/mbr2xgd.css
+++ b/src/mbr2xgd.css
@@ -12,6 +12,10 @@ body{
 	text-align:center;
 	text-shadow:0px 1px 1px black;
 }
+
+h2{
+	text-align:center;
+}
 /*font padrao do site... -------------------------------------------------------------------------------------------*/
 
 /*file: mbr2xgd.css ------------------------------------------------------------------------------------------------*/
